# krr-cpu-project

./: CMakeLists.txt
src/: eigen_efficient.cpp  gaussian_data.cpp  gsc_falkon  gsc_falkon.cpp  main.cpp  perf.data  perf.data.old
